--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -4,7 +4,7 @@
 
 .profil-pic {
  position: absolute;
- box-shadow: 1px 1px 3px $gray;
+ box-shadow: 1px 1px 3px #cac9d1;
  z-index: 11;
  left: calc(50% - 150px/2);
 }
@@ -43,5 +43,46 @@ width: 120px;
 .bar-size-sm hr {
 width: 100px;
 }
+
+.quotation_item {
+width: 100%;
+height:100%;
+border: 1px solid #cac9d1;
+margin-top: 10px;
+margin-bottom: 10px;
+padding-top: 10px;
+padding-left: 20px;
+padding-right: 20px;
+box-shadow: 1px 1px 3px #cac9d1;
+border-radius: 2px;
+}
+
+// tests sur la card
+.photo-box {
+border: 1px solid #cac9d1;
+width: 100px;
+height:50px;
+}
+
+.list-box {
+border: 1px solid #cac9d1;
+width: 100px;
+height:50px;
+}
+
+.button-box {
+border: 1px solid #cac9d1;
+width: 100px;
+height:50px;
+}
+
+.frame {
+display: flex;
+justify-content: space-around;
+align-items: center;
+border: 1px solid #cac9d1;
+padding: 20px;
+}
+
 
 
