que de la merde

--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -53,36 +53,74 @@ margin-bottom: 10px;
 padding-top: 10px;
 padding-left: 20px;
 padding-right: 20px;
-box-shadow: 1px 1px 3px #cac9d1;
+box-shadow: 1px 1px 2px #cac9d1;
 border-radius: 2px;
+position: relative;
 }
 
 // tests sur la card
 .photo-box {
 border: 1px solid #cac9d1;
-width: 100px;
-height:50px;
 }
-
 .list-box {
 border: 1px solid #cac9d1;
-width: 100px;
-height:50px;
 }
-
 .button-box {
 border: 1px solid #cac9d1;
-width: 100px;
-height:50px;
 }
-
 .frame {
 display: flex;
-justify-content: space-around;
-align-items: center;
 border: 1px solid #cac9d1;
 padding: 20px;
+height: 60px;
+width: 100%;
 }
+.card-frame {
+flex: 1 1 auto;
+}
+.green-circle {
+  background: #5cb85c;
+  border-radius:50%;
+  width:10px;
+  height:10px;
+  position: absolute;
+  right: 16px;
+  bottom: 16px;
+}
+.orange-circle {
+  background: #f0ad4e;
+  border-radius:50%;
+  width:10px;
+  height:10px;
+  position: absolute;
+  right: 16px;
+  bottom: 50%;
+}
+.red-circle {
+  background: #d9534f;
+  border-radius:50%;
+  width:10px;
+  height:10px;
+  position: absolute;
+  right: 16px;
+  bottom: 16px;
+}
+.hashtag {
+  position: absolute;
+  left: 16px;
+  bottom: 10px;
+}
+
+.container {
+margin-top: 50px;
+margin-bottom: 50px;
+}
+
+
+
+
+
+
 
 
 
