modifs avec du scotch du dashboard

--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -94,7 +94,7 @@ flex: 1 1 auto;
   height:10px;
   position: absolute;
   right: 16px;
-  bottom: 50%;
+  bottom: 16px;
 }
 .red-circle {
   background: #d9534f;
