better workshops#show

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -8,7 +8,7 @@
   border-radius: 0;
   padding: 18px 80px 20px;
   transition: all .7s ease-out;
-  background: linear-gradient(270deg, $gold1, $gold2, rgba(black, 0), rgba(black, 0));
+  // background: linear-gradient(270deg, $gold1, $gold2, rgba(black, 0), rgba(black, 0));
   background-position: 1% 50%;
   background-size: 300% 300%;
   text-decoration: none;
@@ -19,6 +19,7 @@
   &:hover {
     color: white;
     border: 1px solid rgba($gold1, 0);
+    background: linear-gradient(270deg, $gold1, $gold2, rgba(black, 0), rgba(black, 0));
     background-position: 99% 50%;
     text-decoration: none;
   }
