--- a/app/views/workshops/index.html.erb
+++ b/app/views/workshops/index.html.erb
@@ -20,8 +20,8 @@
             <div class="card-img">
               <%= cl_image_tag wksp.photos.first, height: 150, width: 358, crop: :fill, style: "background: rgba(0,36,61,0.6)" %>
               <div class="col-xs-12 text-center craftman-name">
-                <p class="white"><%= wksp.craftman.first_name %></p>
-                <p class="white"><%= wksp.craftman.last_name %></p>
+                <p class="roboto txt-gras white"><%= wksp.craftman.first_name.capitalize %></p>
+                <p class="roboto txt-gras white"><%= wksp.craftman.last_name.capitalize %></p>
               </div>
             </div>
             <div class="card-block">
