--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -115,22 +115,25 @@
           <!-- messages  -->
           <div class="container-mess">
             <div class="row">
-              <div class="col-xs-12 col-sm-12">
+              <div class="col-xs-12 col-sm-12 quotation-text">
 
                 <div class="color-line-wood text-left bar-size-sm"><hr></div>
                 <h4 class="txt-md txt-heavy no-margin-top">messages</h4>
 
-                <div class="quotation_item">
-                 <% if @threads != nil %> <!-- error to fix !!!!!!!!!!!!  -->
-                    <p class="txt-light">No conversation yet</p>
+
+                 <% if @threads != nil %>
+                    <div class="quotation_item">
+                      <p class="txt-light">No conversation yet</p>
+                    </div>
                  <% else %>
                     <% @threads.each do |(workshop, user), message| %>
-                    <p>
-                    <%= link_to "#{workshop.title} with #{workshop.craftman.first_name}", workshop_messages_path(workshop) %>
-                    </p>
+                    <div class="quotation_item">
+                      <p>
+                      <%= link_to "#{workshop.title} with #{workshop.craftman.first_name}", workshop_messages_path(workshop) %>
+                      </p>
+                    </div>
                     <% end %>
                  <% end %>
-                </div>
 
               </div>
             </div>
@@ -144,28 +147,51 @@
                 <div class="color-line-wood text-left bar-size-sm"><hr></div>
                 <h4 class="txt-md txt-heavy no-margin-top">quotations</h4>
 
-                <div class="quotation_item text-center">
                    <% if @user.bookings != nil %>
+
                       <% @user.bookings.all.each_with_index do |booking, index| %>
-                        <div class="hashtag">
-                          <%= "##{index + 1}" %>
+                        <div class="quotation_item ">
+                          <div class="row">
+
+                            <div class="col-xs-1">
+                              <%= "##{index + 1}" %>
+                            </div>
+
+                            <div class="col-xs-8">
+                              <p>
+                              <%= link_to "#{booking.workshop.title}, from #{booking.workshop.craftman.first_name}", edit_booking_path(booking), class: "padded-sm quotation-text" %>
+                              </p>
+                            </div>
+
+                            <div class="col-xs-2 quotation-text text-right">
+                              <% if booking.status == "submitted" %>
+                                <p>pending</p>
+                              <% elsif booking.status == "accepted" %>
+                                <p>accepted</p>
+                              <% else %>
+                                <p>rejected</p>
+                              <% end %>
+                            </div>
+
+                            <div class="col-xs-1">
+                              <% if booking.status == "submitted" %>
+                                <div class="orange-circle"></div>
+                              <% elsif booking.status == "accepted" %>
+                                <div class="green-circle"></div>
+                              <% else %>
+                                <div class="red-circle"></div>
+                              <% end %>
+                            </div>
+
+                          </div>
+
                         </div>
-                          <p>
-                          <%= link_to "#{booking.workshop.title} - by #{booking.workshop.craftman.first_name}", edit_booking_path(booking), class: "padded-sm" %>
-                          </p>
-                          <% if booking.status == "submitted" %>
-                            <div class="orange-circle"></div>
-                          <% elsif booking.status == "accepted" %>
-                            <div class="green-circle"><%= "#{booking.status}" %></div>
-                          <% else %>
-                            <div class="red-circle"><%= "#{booking.status}" %></div>
-                          <% end %>
                       <% end %>
                    <% else %>
-                      <p class="txt-light">No quotation yet</p>
+                     <div class="quotation_item text-center">
+                       <p class="txt-light">No quotation yet</p>
+                     </div>
                    <% end %>
-                </div>
-
               </div>
             </div>
           </div>
