--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -66,6 +66,9 @@
       <!-- Login text link -->
       <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
 
+      <!-- Login as craftman text link -->
+      <%= link_to t(".sign_in", default: "Login as craftman"), new_craftman_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
+
       <!-- Button (call-to-action) -->
       <%= link_to t(".top_call_to_action", default: "Create a workshop"), new_workshop_path, class: "navbar-wagon-item navbar-wagon-button btn" %>
     <% end %>
