--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -33,7 +33,7 @@
             <h3><%= @user.last_name %></h3>
            </div>
            <div class="text-center">
-             <%= link_to "Editez profile", edit_profile_path, class: "btn btn-primary" %>
+             <%= link_to "Edit profile", edit_profile_path, class: "btn btn-primary" %>
            </div>
       </div>
 
