--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -10,6 +10,7 @@
             <%= f.input :first_name %>
             <%= f.input :last_name %>
             <%= f.input :phone %>
+            <%= f.input :description %>
             <%= f.input :avatar, as: :attachinary %>
 
             <%= f.button :submit %>
