--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -63,6 +63,11 @@
   margin-bottom: 20px;
 }
 
+.margin-sm {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
 .margin-verti-fat {
   margin-top: 40px;
   margin-bottom: 40px;
@@ -138,6 +143,10 @@
 .padded-full-lg {
   padding: 40px;
 
+}
+.padded-side-sm {
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 
