--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,46 @@
 <br><br><br>
 
+<ul class="grid cs-style-1">
+  <li>
+    <figure>
+      <img src="../../../assets/images/marbre.jpg">
+      <figcaption>
+        <h3>STONE</h3>
+        <span>Jacob Cummings</span>
+      </figcaption>
+    </figure>
+  </li>
+  <li>
+    <figure>
+      <img src="images/marbre.jpg" alt="Stone">
+      <figcaption>
+        <h3>STONE</h3>
+        <span>Jacob Cummings</span>
+      </figcaption>
+    </figure>
+  </li>
+  <li>
+    <figure>
+      <img src="images/marbre.jpg" alt="Stone">
+      <figcaption>
+        <h3>STONE</h3>
+        <span>Jacob Cummings</span>
+      </figcaption>
+    </figure>
+  </li>
+  <li>
+    <figure>
+      <img src="images/marbre.jpg" alt="Stone">
+      <figcaption>
+        <h3>STONE</h3>
+        <span>Jacob Cummings</span>
+      </figcaption>
+    </figure>
+  </li>
+</ul>
+
+
+
 
 <div class="container-fluid">
   <div class=row >
@@ -17,3 +58,5 @@
     </div>
   </div>
 </div>
+
+
